2005-06-03  Carl Worth  <cworth@cworth.org>

	* src/cairoint.h:
	* src/cairo-gstate.c:
	* src/cairo.c: (_cairo_set_source_solid), (cairo_set_source_rgb),
	(cairo_set_source_rgba): Move internal convenience up from
	_cairo_gstate_set_source_solid to _cairo_set_source_solid so that
	all set_source functions flow through cairo_set_source.

2005-06-01  Carl Worth  <cworth@cworth.org>

	* src/cairo-gstate.c: (_cairo_gstate_init): Remove obsolete
	_cairo_gstate_set_target_surface, folding its contents into
	_cairo_gstate_init, most of which disappears due to constant
	folding. Ensure that gstate->next is initialized even if
	_cairo_pattern_create_solid fails.
	
	* src/cairo-xcb-surface.c: Remove unused
	_cairo_xcb_surface_set_clip_region.

2005-06-01  Carl Worth  <cworth@cworth.org>

	* src/cairoint.h:
	* src/cairo-font.c:
	* src/cairo-ft-font.c:
	* src/cairo-glitz-surface.c:
	* src/cairo-gstate.c:
	* src/cairo-image-surface.c:
	* src/cairo-pattern.c:
	* src/cairo-pdf-surface.c:
	* src/cairo-png.c:
	* src/cairo-surface.c:
	* src/cairo-win32-font.c:
	* src/cairo-win32-surface.c:
	* src/cairo-xcb-surface.c:
	* src/cairo-xlib-surface.c: Rename CAIRO_OK to STATUS_OK. No
	intended changes in functionality.

2005-06-01  Carl Worth  <cworth@cworth.org>

	* src/cairo-gstate-private.h:
	* src/cairo-gstate.c: Rename gstate->surface to gstate->target. No
	intended changes in functionality.

2005-06-01  Carl Worth  <cworth@cworth.org>

	* src/cairo-gstate-private.h:
	* src/cairo-gstate.c: (_cairo_gstate_init): Remove unused fields
	from cairo_gstate_t, (font_family, font_slant,
	font_weight). Reorder fields to match between declaration and
	initialization and to put the most problematic fields (surface and
	source) at the end. No intended changes in functionality.

2005-06-01  Carl Worth  <cworth@cworth.org>

	* test/Makefile.am (XFAIL_TESTS): Add self-intersecting to the
	list of expected failures.

2005-06-01  Carl Worth  <cworth@cworth.org>

	* test/.cvsignore: